--- a/goa.html
+++ b/goa.html
@@ -151,7 +151,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="container my-5">
+  <div class="container my-5 d-flex justify-content-center aligh-items-center">
     <h1 class="font-weight-bolder text-center" style="font-size: 70px; color:  #85144b;">Goa Package</h1>
     <p class="font-weight-normal text-left my-5" style="font-size: 30px;">
         <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
