--- a/goa.html
+++ b/goa.html
@@ -152,8 +152,8 @@
     </a>
   </div>
   <div class="container my-5 d-flex justify-content-center aligh-items-center">
-    <h1 class="font-weight-bolder text-center" style="font-size: 70px; color:  #85144b;">Goa Package</h1>
-    <p class="font-weight-normal text-left my-5" style="font-size: 30px;">
+    <h1 class="font-weight-bolder text-center" style="color:  #85144b;">Goa Package</h1>
+    <p class="font-weight-normal text-left my-5">
         <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
 
         Goa is a state on the southwestern coast of India within the region known as the Konkan, and geographically
