--- a/mahabaleshwar.html
+++ b/mahabaleshwar.html
@@ -158,8 +158,8 @@
     </div>
 
     <div class="container my-5">
-        <h1 class="font-weight-bolder text-center" style="font-size: 70px; color:  #85144b;">Mahabaleshwar Package</h1>
-        <p class="font-weight-normal text-left my-5" style="font-size: 30px;">
+        <h1 class="font-weight-bolder text-center" style="color:  #85144b;">Mahabaleshwar Package</h1>
+        <p class="font-weight-normal text-left my-5">
             <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
             Mahabaleshwar has an average elevation of 1,353 metres (4,439 ft).
 
