--- a/mahabaleshwar.html
+++ b/mahabaleshwar.html
@@ -160,7 +160,7 @@
     <div class="container my-5">
         <h1 class="font-weight-bolder text-center" style="color:  #85144b;">Mahabaleshwar Package</h1>
         <p class="font-weight-normal text-left my-5">
-            <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
+            <img src="https://source.unsplash.com/200x200/?goa" class="rounded float-right img-thumbnail mx-5 my-2" alt="...">
             Mahabaleshwar has an average elevation of 1,353 metres (4,439 ft).
 
             Located about 120 km (75 mi) southwest of Pune and 285 km (177 mi) from Mumbai, Mahabaleshwar is a vast
