--- a/lonavala.html
+++ b/lonavala.html
@@ -159,7 +159,7 @@
     <div class="container my-5">
         <h1 class="font-weight-bolder text-center" style="color:  #85144b;">Lonavala Package</h1>
         <p class="font-weight-normal text-left my-5">
-            <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
+            <img src="https://source.unsplash.com/200x200/?goa" class="rounded float-right img-thumbnail mx-5 my-2" alt="...">
             Lonavala (Marathi: लोणावळा) is a town and a hill station Municipal Council in Pune district
             in the Indian State of Maharashtra. It is about 64 km west of modern-day Pune city and 96 km to the east of
             Mumbai. It is known for its production of the hard candy chikki and is also a major stop on the railway line
