--- a/goa.html
+++ b/goa.html
@@ -154,7 +154,7 @@
   <div class="container my-5">
     <h1 class="font-weight-bolder text-center" style="color:  #85144b;">Goa Package</h1>
     <p class="font-weight-normal text-left my-5">
-        <img src="https://source.unsplash.com/400x400/?goa" class="rounded float-left img-thumbnail mx-5 my-2" alt="...">
+        <img src="https://source.unsplash.com/200x200/?goa" class="rounded float-right img-thumbnail mx-5 my-2" alt="...">
 
         Goa is a state on the southwestern coast of India within the region known as the Konkan, and geographically
         separated from the Deccan highlands by the Western Ghats. It is surrounded by the Indian states of
